--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apartments-finder",
+  "name": "search-appartments",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
